--- a/cee-admin_parent/cee-admin/.settings/org.eclipse.wst.common.component
+++ b/cee-admin_parent/cee-admin/.settings/org.eclipse.wst.common.component
@@ -4,7 +4,13 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+        <dependent-module archiveName="jcompany_service-6.1.9.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/jcompany_service/jcompany_service">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <dependent-module archiveName="jcompany_commons-6.1.9.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/jcompany_commons/jcompany_commons">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="jcompany_integration-6.1.9.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/jcompany_integration/jcompany_integration">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <dependent-module archiveName="jcompany_controller-6.1.9.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/jcompany_controller/jcompany_controller">
@@ -14,6 +20,9 @@
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <dependent-module archiveName="cee-admin_commons-1.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/cee-admin_commons/cee-admin_commons">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="jcompany_model-6.1.9.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/jcompany_model/jcompany_model">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="java-output-path" value="target/classes"/>
